# vizwicket

./: README.md
backend/: README.md  build.sh  pyproject.toml
backend/core/: settings.py  urls.py
backend/service/management/commands/: import_deliveries.py  import_matches.py  import_players.py
backend/service/migrations/: 0001_initial.py  0002_alter_delivery_batter_alter_delivery_bowler_and_more.py
backend/service/models/: __init__.py  delivery.py  match.py  player.py  urls.py
backend/service/models/views/: api.py
frontend/: package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx
frontend/src/components/: index.tsx
frontend/src/components/Charts/: index.tsx
frontend/src/components/Charts/BarChart/: index.tsx
frontend/src/components/InputField/: index.tsx
frontend/src/components/Loader/: index.tsx
frontend/src/components/SelectField/: index.tsx
frontend/src/hooks/: useAnalytics.tsx  useResponsiveSize.tsx
frontend/src/layout/: PublicLayout.tsx
frontend/src/pages/: NotFound.tsx  index.tsx
frontend/src/pages/Home/: Dashboard.tsx  FilterSideBar.tsx  index.tsx
frontend/src/pages/Home/Analytics/: LocationInfo.tsx  MatchInfo.tsx  ScoreCard.tsx  constants.ts  index.tsx
frontend/src/pages/Home/Analytics/Charts/: BoundariesChart.tsx  ManhattanChart.tsx  WicketDistributionChart.tsx  WormChart.tsx  index.tsx
frontend/src/routes/: Routes.tsx  components.ts
frontend/src/theme/: CustomThemeProvider.tsx  base.ts  index.tsx
frontend/src/utils/: axios.ts  helpers.ts
